add hash frequency ramping. add regulator output voltage to AxeOS
