# main/http_server/axe-os/src/app/services/system.service.ts
@@ -78,6 +78,7 @@ export class SystemApiService {
         maxAllocHeap: 90000,
         coreVoltage: 1200,
         coreVoltageActual: 1200,
+        regulatorVoltage: 2200,
         asicVoltages: [1101, 1098, 1104, 1100],
         hostname: "Bitaxe",
         macAddr: "2C:54:91:88:C9:E3",
